= Unreleased =
# Fixed
- Changed to use regular courier services for Estonian clients
- It has been made so that the VAT number is not required for the registration of the shipment to the company

# Improved
- Added use of address 2 field value

= 2.2.2 =
# Fixed
- Fixed registration of shipments when the shipment is delivered by a courier

# Improved
- Added a default shipping country parameter to the module settings, which allows to load Omniva shipping methods on the Cart and Checkout pages before a shipping address has been entered
- Added platform and version identification to all requests to the Omniva server
- Added Box Calculator library
- Changed to calculate shipment dimensions using the Box Calculator library

# Updated
- API library to 1.3.2

= 2.2.1 =
# Fixed
- Fixed "Omniva orders" page error, when international carriers had never been created before
- Removed the use of the str_contains function, since this function only appeared in PHP 8.0

# Updated
- API library to 1.3.1

= 2.2.0 =
# Fixed
- Fixed adding a new DB column in the Upgrade function of the version 2.1.0

# Improved
- Created the possibility to add/remove the desired delivery methods in the module settings
- Created the ability to choose what actions will be performed during the module uninstall
- Created an opportunity to register shipments to European countries

= 2.1.1 =
# Fixed
- Fixed return code sending parameter for OMX

# Improved
- Added recognition of COD module "Cash on delivery with order summary" (codpro).
- Added sending of shipments data to the Omniva PowerBi system

# Updated
- API library to 1.2.0

= 2.1.0 =
# Improved
- Added compatibility with One Page Checkout PS (onepagecheckoutps) module
- The module is adapted to work with Omniva OMX

# Changed
- Changed the type of the "Company country code" field to Select in the module settings to avoid an errors when entered an invalid value

# Updated
- API library to 1.1.0

= 2.0.21 =
# Improved